[metadata]
name = mangadl
version = 0.1.0
author = lmaonator
author_email = lmaonator@gmail.com
description = A cli script to download and package manga into cbz for Komga
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lmaonator/mangadl
project_urls =
    Bug Tracker = https://github.com/lmaonator/mangadl/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Environment :: Console
    Natural Language :: English
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    mangadl = mangadl.mangadl:main

[options.packages.find]
where = src

[flake8]
max-line-length = 119
