[metadata]
name = mangadlmao
version = 1.4.1
author = lmaonator
author_email = lmaonator@gmail.com
description = A cli script to download and package manga into CBZ for Komga
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lmaonator/mangadlmao
project_urls =
    Bug Tracker = https://github.com/lmaonator/mangadlmao/issues
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Multimedia :: Graphics
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    requests
    appdirs
    PyYAML
    click
    beautifulsoup4
    filetype

[options.entry_points]
console_scripts =
    mangadlmao = mangadlmao.mangadlmao:main

[options.packages.find]
where = src

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203,E501

[mypy]
python_version = 3.9
files = src/

[mypy-feedparser.*]
ignore_missing_imports = True

[mypy-appdirs.*]
ignore_missing_imports = True
